11.9.2 fix spacing

--- a/projects/dgp-ng-app/src/_theming.scss
+++ b/projects/dgp-ng-app/src/_theming.scss
@@ -125,8 +125,11 @@
 }
 
 
+
 dgp-inspector-item {
-    .mat-list-item-content {
-        flex-grow: 1;
+    mat-list-item {
+        .mat-list-item-content {
+            flex-grow: 1 !important;
+        }
     }
 }
